<resources>
    <string name="app_name">RecipeApp</string>
    <string name="favourite">Favourite</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_100k_premium_recipe">100K+ Premium Recipe</string>
    <string name="get_cooking">Get Cooking</string>
    <string name="simple_way_to_find_tasty_recipe">Simple way to find Tasty Recipe</string>
    <string name="chef_image">chef image</string>
    <string name="email">Enter Email</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up_help_text">Let’s help you set up your account, it won’t take long.</string>
    <string name="name">Enter Name</string>
    <string name="password">Enter Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member">Already a member? </string>
    <string name="sign_in"> Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="hello">Hello,</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="add_to_favourite">add to favourite</string>
    <string name="spicy_arrabiata_penne">Spicy Arrabiata Penne</string>
    <string name="bring_a_large_pot_of_water_to_a_boil_add_kosher_salt_to_the_boiling_water_then_add_the_pasta_cook_according_to_the_package_instructions_about_9_minutes_in_a_large_skillet_over_medium_high_heat_add_the_olive_oil_and_heat_until_the_oil_starts_to_shimmer_add_the_garlic_and_cook_stirring_until_fragrant_1_to_2_minutes_add_the_chopped_tomatoes_red_chile_flakes_italian_seasoning_and_salt_and_pepper_to_taste_bring_to_a_boil_and_cook_for_5_minutes_remove_from_the_heat_and_add_the_chopped_basil_drain_the_pasta_and_add_it_to_the_sauce_garnish_with_parmigiano_reggiano_flakes_and_more_basil_and_serve_warm">Bring a large pot of water to a boil. Add kosher salt to the boiling water, then add the pasta. Cook according to the package instructions, about 9 minutes. In a large skillet over medium-high heat, add the olive oil and heat until the oil starts to shimmer. Add the garlic and cook, stirring, until fragrant, 1 to 2 minutes. Add the chopped tomatoes, red chile flakes, Italian seasoning and salt and pepper to taste. Bring to a boil and cook for 5 minutes. Remove from the heat and add the chopped basil. Drain the pasta and add it to the sauce. Garnish with Parmigiano-Reggiano flakes and more basil and serve warm.</string>
    <string name="meal_image">meal_image</string>
    <string name="add_to_favorite_icon">add to favorite icon</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="category">Category :</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_100k_premium_recipe">100K+ Premium Recipe</string>
    <string name="get_cooking">Get Cooking</string>
    <string name="simple_way_to_find_tasty_recipe">Simple way to find Tasty Recipe</string>
    <string name="chef_image">chef image</string>
    <string name="email">Enter Email</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up_help_text">Let’s help you set up your account, it won’t take long.</string>
    <string name="name">Enter Name</string>
    <string name="password">Enter Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member">Already a member? </string>
    <string name="sign_in"> Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="hello">Hello,</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="add_to_favourite">add to favourite</string>
    <string name="spicy_arrabiata_penne">Spicy Arrabiata Penne</string>
    <string name="bring_a_large_pot_of_water_to_a_boil_add_kosher_salt_to_the_boiling_water_then_add_the_pasta_cook_according_to_the_package_instructions_about_9_minutes_in_a_large_skillet_over_medium_high_heat_add_the_olive_oil_and_heat_until_the_oil_starts_to_shimmer_add_the_garlic_and_cook_stirring_until_fragrant_1_to_2_minutes_add_the_chopped_tomatoes_red_chile_flakes_italian_seasoning_and_salt_and_pepper_to_taste_bring_to_a_boil_and_cook_for_5_minutes_remove_from_the_heat_and_add_the_chopped_basil_drain_the_pasta_and_add_it_to_the_sauce_garnish_with_parmigiano_reggiano_flakes_and_more_basil_and_serve_warm">Bring a large pot of water to a boil. Add kosher salt to the boiling water, then add the pasta. Cook according to the package instructions, about 9 minutes. In a large skillet over medium-high heat, add the olive oil and heat until the oil starts to shimmer. Add the garlic and cook, stirring, until fragrant, 1 to 2 minutes. Add the chopped tomatoes, red chile flakes, Italian seasoning and salt and pepper to taste. Bring to a boil and cook for 5 minutes. Remove from the heat and add the chopped basil. Drain the pasta and add it to the sauce. Garnish with Parmigiano-Reggiano flakes and more basil and serve warm.</string>
    <string name="meal_image">meal_image</string>
    <string name="add_to_favorite_icon">add to favorite icon</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="category">Category :</string>
</resources>